Fixed up position of close 'x' on narrow screens like iPhone SE.

--- a/src/sass/views/tab-home.scss
+++ b/src/sass/views/tab-home.scss
@@ -106,6 +106,8 @@
   .icon.close-home-tip {
     color: #666;
     font-size: 38px;
+    height: auto;
+    top: 8px;
   }
   .tab-home {
     &__logo {
